# infeasible

./: .gitignore  CLAUDE.md  CMakeLists.txt  DESIGN.md  LICENSE  README.md
examples/: cellar.story  cellar_ground.story  cellar_prop.story  combat5e.story  combat_srd.story  encounter5e.story  fireball5e.story  mv_door.story  numeric_combat.story  numeric_hp.story  ramif_cellar.story  spellbook5e.story  srd_probe.story  srd_probe2.story
scripts/: bootstrap_emsdk.sh  build_wasm.sh
src/app/: main.c
src/core/: arena.c  arena.h  grow.h  intern.c  intern.h
src/lang/: lexer.c  lexer.h  story.c  story.h
src/logic/: dl.c  dl.h  dl_col.c  dl_col.h  dl_trace.c  dl_trace.h
src/state/: world.c  world.h
src/wasm/: bindings.c
tests/: bench_5e.c  bench_col.c  bench_dl.c  bench_slice.c  bench_step.c  test_bands.c  test_binder.c  test_binderlane.c  test_clamp.c  test_col.c  test_dl.c  test_domain.c  test_functional.c  test_ground.c  test_intargs.c  test_judgstep.c  test_landmark.c  test_lanes.c  test_multival.c  test_mv.c  test_numeff.c  test_numeric.c  test_numlane.c  test_numpipe.c  test_parse.c  test_prov.c  test_provider.c  test_ramif.c  test_scene.c  test_setparam.c  test_spawn.c  test_store.c  test_world.c
web/: README.md  build.sh  exports.c  host.mjs  loop_driver.mjs
